k8s/postgres-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: postgres
  template:
    metadata:
      labels:
        component: postgres
    spec:
      volumes:
        - name: postgres-storage
          persistentVolumeClaim: #This is the request that we need more space for the cluster
            claimName: database-persistent-volume-claim #this goes to the file "database-persistent-volume-claim.yaml" file 
      containers:
        - name: postgres
          image: postgres
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: postgres-storage #must be identical to the previous "volume name"
              mountPath: /var/lib/postgresql/data
              subPath: postgres
