k8s/client-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: client-cluster-ip-service

spec: #we specify the way that the service behaves.
  type: ClusterIP
  selector: #its gonna give us access to the deployment itself
    component: web
  
  ports:
  - port: 3000
    targetPort: 3000
