k8s/redis-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-cluster-ip-service
spec: #we specify the way that the service behaves.
  type: ClusterIP
  selector:
    component: redis
  ports:
    - port: 6379
      targetPort: 6379 #Tener en cuenta que esta fila debe estar tabbeada
