k8s/server-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: server-cluster-ip-service
spec: #we specify the way that the service behaves.
  type: ClusterIP
  selector:
    component: server
  ports:
    - port: 5000
      targetPort: 5000 #Tener en cuenta que esta fila debe estar tabbeada
