k8s/ingress-service.yaml
apiVersion: v1 #newest kubernetes version at the moment
kind: Ingress
metadata:
  name: ingress-service
  annotations: 
    kubernetes.io/ingress.class: nginx  #This command is telling kubernetes that we want to create an ingress through nginx project
    nginx.ingress.kubernetes.io/rewrite-target: / #this tells us how nginx behaves.
spec:
  rules:
    - http:
        paths: #we declare 2 possible paths:
          - path: /
            backend:
              serviceName: client-cluster-ip-service
              servicePort: 3000
          - path: /api/
            backend:
              serviceName: server-cluster-ip-service
              servicePort: 5000
